--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,10 +13,10 @@ sites:
     url: https://analytics.androz2091.fr
   - name: Plex
     url: https://plex.androz2091.fr/web/index.html
-  - name: Overseer
-    url: https://overseer.androz2091.fr
   - name: Sabnzbd
     url: https://sabnzbd.androz2091.fr
+  - name: Overseerr
+    url: https://overseerr.androz2091.fr
   - name: Sonarr
     url: https://sonarr.androz2091.fr
   - name: Radarr
