--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -23,6 +23,10 @@ sites:
     url: https://radarr.androz2091.fr
   - name: Bazarr
     url: https://bazarr.androz2091.fr
+  - name: Jackett
+    url: https://bazarr.androz2091.fr
+  - name: Portainer
+    url: https://portainer.androz2091.fr
   - name: Jellyfin
     url: https://jellyfin.androz2091.fr
   - name: Cloud
